# memagent

./: ARCHITECTURE.md  README.md  pyproject.toml
benchmark/: README.md  runner.py  score.py
benchmark/results/: b2b_v1.jsonl  b2b_v1_sonnet.jsonl  summary.json
docs/: CNAME  index.html
src/memagent/: cli.py  consolidation.py  db.py  embedder.py  graph_export.py  mcp_server.py  retrieval.py  store.py
src/pamiec/: consolidation.py  graph_export.py  mcp_server.py  retrieval.py  store.py
