[project]
name = "memagent"
version = "0.1.0"
description = "Hierarchical graph memory for Claude sessions"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.0",
    "fastembed>=0.3.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.scripts]
memagent = "memagent.cli:main"
memagent-mcp = "memagent.mcp_server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
